--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "test": "karma start ./test-config/karma.conf.js"
   },
   "dependencies": {
     "@angular/common": "5.0.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
+    "@types/jasmine": "^2.8.4",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project"
