--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/entity": "^5.1.0",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
+    "angular2-uuid": "^1.1.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
