--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.1.0",
     "@ngrx/entity": "^5.1.0",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
